--- a/Clase1/carrito.html
+++ b/Clase1/carrito.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>WrestlingShop / Carrito</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="unnamed.png" type="image/png" />
+
 </head>
 <body class="pagina-carrito">
 
